--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,14 +16,11 @@ expireTimeRefreshToken=5184000000
 spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/callback/google
 spring.security.oauth2.client.registration.google.scope=email, profile
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 authorizedRedirectUri=http://localhost:3000/oauth2/redirect
-
-fullRegistrationRedirectUri=http://localhost:3000/oauth2/fullRegister
-
 
 # configuration email
 #spring.mail.transport.protocol=smtp
