--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 
-#log4j.rootCategory = ERROR, consoleAppender, rollingFileAppender
-log4j.rootLogger = DEBUG, consoleAppender, rollingFileAppender
+log4j.rootCategory = ERROR, consoleAppender, rollingFileAppender
+#log4j.rootLogger = DEBUG, consoleAppender, rollingFileAppender
 
 
 log4j.appender.consoleAppender = org.apache.log4j.ConsoleAppender
@@ -17,7 +17,7 @@ log4j.appender.rollingFileAppender.layout.ConversionPattern = [%p] time: %d{yyyy
 
 log4j.appender.rollingFileAppender.File= TestLogs.log
 
-#log4j.appender.debugfile=org.apache.log4j.FileAppender
-#log4j.appender.debugfile.layout=org.apache.log4j.PatternLayout
-#log4j.appender.debugfile.layout.conversionPattern= [%5p] %d{HH:mm:ss} %t %c{1}:%M:%L - %m%n
-#log4j.appender.debugfile.file=myproject-debug.log
+log4j.appender.debugfile=org.apache.log4j.FileAppender
+log4j.appender.debugfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.debugfile.layout.conversionPattern= [%5p] %d{HH:mm:ss} %t %c{1}:%M:%L - %m%n
+log4j.appender.debugfile.file=myproject-debug.log
