--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Datasource
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/tbrm
+spring.datasource.username=admin
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
